--- a/CHANGES
+++ b/CHANGES
@@ -1,2 +1,2 @@
-Version 0.0.1 released 2011-11-20
-    * Initial release.
+v0.0.1, 2011-11-20 -- Initial release.
+v0.0.2, 2012-08-24 -- Fixed NaN and INF float types.
